--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <source src="./video/beach.mp4" type="video/mp4">
       </video>
     </div>
+    <header>
+      <h1>Meditation world!</h1>
+      <p>Select time duration & sound option and start meditatin. 🧘🏻‍♀️🧎🏽</p>
+    </header>
     <div class="time-select">
       <button data-time="300">5 Min</button>
       <button data-time="480">8 Min</button>
